Adding new example (#2)